fix wrap cards

--- a/if-finance/css/style.css
+++ b/if-finance/css/style.css
@@ -40,8 +40,9 @@ nav ul{
 body > main{
 	min-height: calc(100vh - 302px);
 	padding: 16px;
-	display: inline-block;
+	display: flex;
 	gap: 16px;
+	flex-wrap: wrap;
 }
 
 body > footer{
@@ -57,6 +58,7 @@ body > footer{
 	background: #0a0a0a;
 	border-radius: 20px;
 	padding: 16px;
+	align-self: baseline;
 }
 
 .card-ticker header{
